atlantis/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: atlantis
  labels:
    app.kubernetes.io/name: atlantis
spec:
  selector:
    app.kubernetes.io/name: atlantis
  ports:
    - name: http
      port: 80
      targetPort: 4141
